test/success/simple-pipe.dsk
func add(a: int, b: int) -> return a + b

func is_even(x: int) -> return (x % 2) == 0

let res = 2 |> add(1) |> is_even()

func sub(a: int, b: int) -> return a - b

let res2 = 2
    |> add(2)
    |> is_even()

let res3 = 2
    |> add(2)
    + 3
    |> sub(1)

assert(res == false)
assert(res2 == true)
assert(res3 == 6)
