test/error/invalid-number-of-args.dsk
let add = (a: int, b: int) -> int
    return a + b
echo(add(1))
